@@ -1,1 +1,1 @@
-libcm4all-was-simple 1 libcm4all-was-simple1 (>= 1.8)
+libcm4all-was-simple 1 libcm4all-was-simple1 (>= 1.9)
