@@ -31,6 +31,7 @@ libcm4all_was_simple_0 {
 		was_simple_puts;
 		was_simple_printf;
 		was_simple_end;
+		was_simple_abort;
 		was_simple_iterator_free;
 		was_simple_iterator_next;
 
