@@ -1,6 +1,7 @@
 libcm4all-was (1.9) unstable; urgency=low
 
   * simple: fix assertion failure after control send error
+  * simple: add _abort()
   * require Debian Jessie or newer
 
  --   
